--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,18 @@
 server:
   port: 8080
   servlet:
-    context-path: /api/v1
+    context-path: /api
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/ecommerce
     username: root
     password: lequanghuy2212
     driver-class-name: com.mysql.cj.jdbc.Driver
-
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
     database-platform: org.hibernate.dialect.MySQLDialect
+springdoc:
+  api-docs:
+    path: /api-docs
